compiler/testData/diagnostics/tests/varargs/kt1838-param.kt
class A(vararg t : Int) {
    init {
        val <!UNUSED_VARIABLE!>t1<!> : IntArray = t
    }
}
